2019-11-25  Tobias Burnus  <tobias@codesourcery.com

	Backport from mainline
	2019-10-11  Tobias Burnus  <tobias@codesourcery.com>

	PR fortran/92050
	* gfortran.dg/pr92050.f90: New.

2019-11-25  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/addr14.adb: New test.

2019-11-21  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/91355
	* g++.dg/torture/pr91355.C: New test.

2019-11-20  Peter Bergner  <bergner@linux.ibm.com>

	Backport from mainline
	2019-11-13  David Edelsohn  <dje.gcc@gmail.com>

	* gcc.target/powerpc/pr92090.c: Limit -mbig to powerpc64le-*-*.
	* gcc.target/powerpc/pr92090-2.c: Likewise.

	2019-11-07  Peter Bergner <bergner@linux.ibm.com>

	PR other/92090
	* gcc.target/powerpc/pr92090-2.c: New test.

	2019-11-07  Peter Bergner <bergner@linux.ibm.com>

	PR other/92090
	* gcc.target/powerpc/pr92090.c: New test.

2019-10-28  Michael Matz  <matz@suse.de>

	Backport from mainline
	PR middle-end/90796
	* gcc.dg/unroll-and-jam.c: Disable loop-invariant motion and adjust.

	PR middle-end/90796
	* gcc.dg/unroll-and-jam.c: Add three invalid and one valid case.

2019-11-20  Jakub Jelinek  <jakub@redhat.com>

	PR c++/90767
	* g++.dg/diagnostic/pr90767-1.C: New test.
	* g++.dg/diagnostic/pr90767-2.C: New test.

	PR middle-end/90840
	* gcc.c-torture/compile/pr90840.c: New test.

	PR target/90867
	* gcc.target/i386/pr90867.c: New test.

	PR c/90898
	* gcc.dg/pr90898.c: New test.

	Backported from mainline
	2019-11-19  Jakub Jelinek  <jakub@redhat.com>

	PR c++/92504
	* g++.dg/gomp/pr92504.C: New test.

2019-11-19  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/91450
	* gcc.c-torture/execute/pr91450-1.c: New test.
	* gcc.c-torture/execute/pr91450-2.c: New test.

2019-11-15  Ilya Leoshkevich  <iii@linux.ibm.com>

	Backport from mainline
	PR rtl-optimization/92430
	* gcc.dg/pr92430.c: New test (from Arseny Solokha).

2019-11-13  Claudiu Zissulescu <claziss@gmail.com>

	Backport from mainline
	* gcc.target/arc/delay-slot-limm.c: New test.