@@ -1,3 +1,11 @@
+2019-11-25  Thomas Koenig  <tkoenig@gcc.gnu.org>
+	Harald Anlauf <anlauf@gmx.de>
+
+	Backport from trunk
+	PR fortran/92569
+	* io/transfer.c (transfer_array_inner):  If position is
+	at AFTER_ENDFILE in current unit, return from data loop.
+
 2019-11-13  Tobias Burnus  <tobias@codesourcery.com>
 
 	Backport from mainline
