@@ -1,3 +1,10 @@
+2019-11-25  Thomas Koenig  <tkoenig@gcc.gnu.org>
+	Harald Anlauf <anlauf@gmx.de>
+
+	Backport from trunk
+	PR fortran/92569
+	* gfortran.dg/eof_6.f90: New test.
+
 2019-11-25  Tobias Burnus  <tobias@codesourcery.com
 
 	Backport from mainline
